# browser-based-languages-benchmarks

./: .gitmodules  Makefile  README.md  index.html  package.json  pnpm-lock.yaml
games/binary-trees/: index.js
games/binary-trees/cpp/: Makefile  run.cpp
games/binary-trees/js/: run.js
games/binary-trees/rust/: .gitignore  Cargo.toml  run.rs
games/binary-trees/rust/pkg/: benchmarks.d.ts  benchmarks.js  benchmarks_bg.wasm  benchmarks_bg.wasm.d.ts
games/fannkuch-redux/: index.js
games/fannkuch-redux/cpp/: Makefile  run.cpp
games/fannkuch-redux/js/: run.js
games/fannkuch-redux/rust/: .gitignore  Cargo.toml  run.rs
games/fannkuch-redux/rust/pkg/: benchmarks_bg.wasm
games/font-parser/: index.js
games/font-parser/cpp/: CMakeLists.txt  main.cpp
games/font-parser/rust/: Cargo.toml  run.rs
games/font-parser/rust/pkg/: benchmarks.d.ts  benchmarks.js  benchmarks_bg.wasm  benchmarks_bg.wasm.d.ts
games/zip/: index.js
games/zip/cpp/: .gitignore  CMakeLists.txt  main.cpp
games/zip/rust/: Cargo.toml  run.rs
games/zip/rust/.cargo/: config
games/zip/rust/pkg/: benchmarks.d.ts  benchmarks.js  benchmarks_bg.wasm  benchmarks_bg.wasm.d.ts  package.json
patches/: zlibjs@0.3.1.patch
src/: App.css  App.jsx  GameRunner.jsx  gameWorker.js  index.css
