[package]
name = "benchmarks"
version = "0.1.0"
authors = ["Vincent Chan <okcdz@diverse.space>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "run.rs"

[dependencies]
wasm-bindgen = "0.2"
deflate = "1.0.0"
console_error_panic_hook="0.1.2"